test/tooltest/effectgen/invalid/17_convert_attribute_invalid.params
struct [[ge::params(type=TEST_CONVERT_INVALID, name="TestConvertInvalid")]] TestConvertInvalidParams {
    [[ge::convert()]]
    int32_t field1;

    [[ge::convert(cast_from="int32_t", custom="SomeTransformer")]]
    int32_t field2;
};
